# 2025-FTP-project

./: pyproject.toml
data/: btcusd_1-min_data.csv
garch/: garch.ipynb  garch.py
rnn/: lstm_1h.ipynb  rnn3h.ipynb  rnn3h_1.5.pth  rnn_3h.ipynb
