[project]
name = "2025-FTP-project"
version = "0.1.0"
description = "Bitcoin trading algo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=7.2.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
